# bfc-winstaller

./: .gitignore  .gitmodules  .pnp.cjs  BUILDING.md  CHANGELOG.md  LICENSE  README.md  index.html  package.json  vite.config.js
.github/workflows/: 64bit.yml
src/: App.jsx  ColorScheme.jsx  Constants.jsx  Store.jsx  Tauri.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cleanup.rs  main.rs
src-tauri/src/commands/: delete_file.rs  delete_path.rs  detect_rerun.rs  download_to_from_url.rs  exit_process.rs  extract_tar_xz.rs  generate_appdata.rs  get_url_contents.rs  mod.rs  open_url.rs  run_bash_commnd.rs  setup_bfc.rs  setup_msys2.rs  unzip_file.rs
src/Components/: BFHeader.jsx  GithubIcon.jsx
src/pages/: BFCDownloader.jsx  Complete.jsx  Fallback.jsx  License.jsx  MSYS2Downloader.jsx  Rerun.jsx  Warning.jsx
src/slices/: AppdataSlice.jsx  BashCommand.jsx  DeleteFile.jsx  DetectRerun.jsx  DownloadedFile.jsx  ExtractXZTar.jsx  SetupBfc.jsx  SetupMsys2.jsx  UnzipFile.jsx  UrlContents.jsx
