[package]
name = "bfc-winstaller"
version = "0.1.2"
description = "The Windows installer for the Brainf**k compiler written by Jacob Allen Morris"
authors = ["Jacob Allen Morris"]
license = "MIT"
repository = "https://github.com/bfcompiler/bfc-winstaller"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.16", features = ["stream"] }
tar = "0.4.38"
lzma-rs = { version = "0.3.0", features = ["stream"] }
zip = "0.6.4"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
